# multiCAD-mcp

./: .gitignore  404.html  CLAUDE.md  README.md  debug_windows.py  dxf_dump.txt  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_screenshot_bounds.py  test_subfolders.py  verify_fix.py
.claude/agents/: docs-specialist.md
01-SETUP/: index.html
02-ARCHITECTURE/: index.html
03-CHANGELOG/: index.html
04-TROUBLESHOOTING/: index.html
05-REFERENCE/: index.html
06-WEB-DASHBOARD/: index.html
api/: index.html
api/adapter/: index.html
api/adapter_manager/: index.html
api/core/: index.html
api/mixins/block/: index.html
api/mixins/connection/: index.html
api/mixins/drawing/: index.html
api/mixins/entity/: index.html
api/mixins/export/: index.html
api/mixins/file/: index.html
api/mixins/layer/: index.html
api/mixins/manipulation/: index.html
api/mixins/selection/: index.html
api/mixins/utility/: index.html
api/mixins/view/: index.html
api/tools/: index.html
claude chats/: 2026-02-08-simplificacion tools y parametros de entrada a tools.txt
docs/: 01-SETUP.md  02-ARCHITECTURE.md  03-EXTENDING.md  04-TROUBLESHOOTING.md  05-REFERENCE.md  06-GIT_SETUP.md  07-CHANGELOG.md  README.md  migration plan to mcp ui.md
search/: search_index.json
src/: __version__.py  config.json  server.py
src/adapters/: __init__.py  adapter_manager.py  autocad_adapter.py  autocad_adapter_backup.py
src/adapters/mixins/: block_mixin.py  connection_mixin.py  drawing_mixin.py  entity_mixin.py  export_mixin.py  file_mixin.py  layer_mixin.py  manipulation_mixin.py  selection_mixin.py  utility_mixin.py  view_mixin.py
src/core/: __init__.py  cad_interface.py  config.py  exceptions.py  models.py
src/mcp_tools/: __init__.py  adapter_manager.py  constants.py  decorators.py  shorthand.py
src/mcp_tools/tools/: __init__.py  blocks.py  connection.py  debug.py  drawing.py  entities.py  export.py  files.py  layers.py  nlp.py  session.py  simple.py
src/nlp/: __init__.py  processor.py
src/ui/: resources.py
src/web/: api.py
src/web/static/: index.html  script.js  style.css
src/z_legacy/adapters/: autocad_adapter_backup.py
src/z_legacy/mcp tools/tools/: blocks_legacy.py  entities_legacy.py  files_legacy.py
test_scripts/: test_mleader_creation.py  verify_fix.py
tests/: test_adapters.py  test_nlp_processor.py  test_shorthand.py  test_validator.py
tests/manual/: draw_leader.py  inspect_entity.py  inspect_mleader.py  test_add_leader_line.py  test_composite_mleader.py  test_parser_manual.py  verify_screenshot.py
tests/unit/: test_adapters.py  test_batch_operations.py  test_security.py
